--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
         with:
           node-version: 20
       - run: npm ci
+      - name: Install Playwright browsers
+        run: npx playwright install
       - run: npm run lint
 
   changed-tests:
@@ -31,6 +33,7 @@ jobs:
         with:
           node-version: 20
       - run: npm ci
+      - run: npx playwright install
       - name: Run only changed tests
         run: |
           CHANGED=$(git diff --name-only origin/main...HEAD | grep "tests/.*.spec.ts" || true)
@@ -56,6 +59,7 @@ jobs:
         with:
           node-version: 20
       - run: npm ci
+      - run: npx playwright install
       - name: Run full regression
         run: npx playwright test --reporter=html
       - name: Upload regression report
