--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: 20
 
       - run: npm ci
-
+      - run: npx playwright install
       - name: Run smoke tests
         run: npx playwright test --grep @smoke --reporter=html
         env:
