--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,6 @@ jobs:
         with:
           node-version: 20
       - run: npm ci
-      - name: Install Playwright browsers
-        run: npx playwright install
       - run: npm run lint
 
   changed-tests:
@@ -32,8 +30,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: npm ci
-      - run: npx playwright install
+      - name: Install dependencies
+        run: npm ci
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
       - name: Run only changed tests
         run: |
           CHANGED=$(git diff --name-only origin/main...HEAD | grep "tests/.*.spec.ts" || true)
@@ -58,8 +58,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: npm ci
-      - run: npx playwright install
+      - name: Install dependencies
+        run: npm ci
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
       - name: Run full regression
         run: npx playwright test --reporter=html
       - name: Upload regression report
