--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -19,9 +19,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-
-      - run: npm ci
-      - run: npx playwright install
+      - name: Install dependencies
+        run: npm ci
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
       - name: Run smoke tests
         run: npx playwright test --grep @smoke --reporter=html
         env:
