--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,12 +96,12 @@ jobs:
             node_modules
           key: node_modules-${{ hashFiles('package-lock.json')}}
       - name: Run Playwright tests
-        run: npm run test:smoke
+        run: npm run test
       - name: Archive test results
         if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
-          name: test-reports-smoke-test
+          name: test-reports-changed-test
           path: |
             ./playwright-report/**/*.*
             ./test-results/**/*.*
@@ -146,12 +146,12 @@ jobs:
             node_modules
           key: node_modules-${{ hashFiles('package-lock.json')}}
       - name: Run Playwright tests
-        run: npm run test:smoke
+        run: npm run test
       - name: Archive test results
         if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
-          name: test-reports-smoke-test
+          name: test-reports-regression-test
           path: |
             ./playwright-report/**/*.*
             ./test-results/**/*.*
